samples/_failures_safe/1761524034_4f6018_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e81e8763.c: In function ‘main’:
./samples/SAFE/__tmp_e81e8763.c:157:17: error: expected declaration or statement at end of input
  157 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_e81e8763.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e81e8763.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e81e8763.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e81e8763.c:157:17: error: expected declaration or statement at end of input
